{
  "click_to_upload": "Click to upload",
  "done": "Done",
  "english": "English",
  "error_loading_photos": "Error loading photos",
  "select_language": "Select a Language:",
  "selected_language": "Selected Language:",
  "spanish": "Spanish",
  "take_some_photos": "Start taking some",
  "uploading": "Uploading...",
  "you_dont_have_photos": "You don't have any photos yet"
}