{
  "click_to_upload": "Haga clic para cargar",
  "done": "Hecho",
  "english": "Inglés",
  "error_loading_photos": "Error al cargar fotos",
  "select_language": "Selecciona un idioma:",
  "selected_language": "Idioma seleccionado:",
  "spanish": "Español",
  "take_some_photos": "Empieza a tomar algunas fotos.",
  "uploading": "Enviando...",
  "you_dont_have_photos": "Aún no tienes fotos"
}